bugfix in js-popup: - handling of popup-content provided in DOM -> wrap instead of copy, hide instead of remove

--- a/css/js-popup.css
+++ b/css/js-popup.css
@@ -1,6 +1,6 @@
 /*  JS-Popup  */
 
-.lzy-popup {
+.lzy-js-popup {
 	background:rgba(0,0,0,.4);
 	cursor:pointer;
 	height:100%;
@@ -13,7 +13,7 @@
 	align-items: center;
 	justify-content: center;
 }
-.lzy-popup-wrapper {
+.lzy-js-popup-wrapper {
 	background-color: #fff;
 	box-shadow: 10px 10px 60px #555;
 	height: auto;
@@ -25,7 +25,7 @@
 	padding: 15px 5%;
 	position: relative;
 }
-.lzy-popup-closebtn .lzy-popup-wrapper::after {
+.lzy-js-popup-closebtn .lzy-js-popup-wrapper::after {
 	content: '\0D7';
 	background-color: #fff;
 	border: 3px solid #999;
@@ -42,6 +42,6 @@
 	height: 30px;
 	text-align: center;
 }
-.lzy-popup-buttons {
+.lzy-js-popup-buttons {
 	margin: 1em 0;
 }
